# ingenuity-gate

./: README.md
firmware/: README.md
firmware/include/: gate.h  serial.h  stepper.h
firmware/src/: gate.cpp  main.cpp  serial.cpp  stepper.cpp
hardware/mechanical/: README.md  model.SLDASM
hardware/mechanical/limit_switch/: DM1-01C.step  pcb.SLDPRT  support_switch_1.SLDPRT  switch_with_pcb.SLDASM  ~$pcb.SLDPRT
hardware/mechanical/motor/: Nema 17 [17HS15-1704S].step  gear.sldprt  support.SLDPRT
hardware/mechanical/portal/: cremaillere.sldprt  portal.SLDASM  portal.SLDPRT  round_bar_D8_L250.SLDPRT
hardware/mechanical/wall/: wall_1.SLDPRT  wall_2.SLDPRT
software/: README.md
software/Appel/: README.md  main.py
software/EtatVersTexte/: agent_python_minimal.gsl  main.py
software/Interface/: main.py  project_common.gsl
software/Maquette/: main.py
software/ReconnaissanceParole/: README.md  main.py  portUtils.py
software/whiteboard/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  Whiteboard.igsscript  WhiteboardDemo.igsplatform  WhiteboardDemo.pro  WhiteboardDemo_advanced.igsplatform  bundle-qt6.sh
software/whiteboard/apps/: CMakeLists.txt
software/whiteboard/apps/Snapshot/: CMakeLists.txt  Snapshot.pro  main.cpp  qml.qrc  qmlinstrument.cpp  stable.h
software/whiteboard/apps/Snapshot/agents/: agents.cmake  agents.pri  snapshot.cpp  snapshot.h
software/whiteboard/apps/Snapshot/qml/: main.qml
software/whiteboard/apps/Snapshot/qml/Loading/: BlockLoadingAnimation.qml
software/whiteboard/apps/Snapshot/qml/Snapshot/: Content.qml  SnapshotTheme.qml
software/whiteboard/apps/Whiteboard/: CMakeLists.txt  Whiteboard.pro  icon.icns  macos-Info.plist.in  main.cpp  qml.qrc  qmlinstrument.h  stable.h
software/whiteboard/apps/Whiteboard/agents/: agents.cmake  agents.pri  whiteboard.cpp  whiteboard.h
software/whiteboard/apps/Whiteboard/models/: graphicelement.cpp  graphicelement.h  message.cpp  message.h
software/whiteboard/apps/Whiteboard/qml/: main.qml
software/whiteboard/apps/Whiteboard/qml/Loading/: LoadingScreen.qml
software/whiteboard/apps/Whiteboard/qml/Menus/: AppMenuBar.qml
software/whiteboard/apps/Whiteboard/qml/Menus/+nativemenubar/: AppMenuBar.qml
software/whiteboard/apps/Whiteboard/qml/Whiteboard/: ChatView.qml  Content.qml  ElementInfo.qml  WhiteboardTheme.qml
software/whiteboard/builds/cmake/modules/windows/: NSIS.template.in  Snapshot_version.rc.in  Whiteboard_version.rc.in  Windeploy.cmake
